--- a/css/main.css
+++ b/css/main.css
@@ -4,98 +4,118 @@
 
 /* reset */
 a {
-    color: inherit;
-    text-decoration: none;
+  color: inherit;
+  text-decoration: none;
 }
-button, input {
-    outline: none;
-    border: none;
-    color: inherit;
+
+button,
+input {
+  outline: none;
+  border: none;
+  color: inherit;
 }
 
 /* common */
 .clearfix::after {
-    content: '';
-    display: block;
-    clear: both;
+  content: '';
+  display: block;
+  clear: both;
 }
+
 body {
-    font-size: 14px;
-    font-family: 'Noto Sans KR', sans-serif;
+  font-size: 14px;
+  font-family: 'Noto Sans KR', sans-serif;
 }
 
 .en {
-   font-family: 'Exo 2', sans-serif; 
+  font-family: 'Exo 2', sans-serif;
+}
+
+br.mo {
+  display: none;
 }
 
 /* header style */
-header{
+header {
   background: rgba(0, 0, 0, 0.2);
   width: 100%;
   height: 100px;
   line-height: 100px;
-  
+
   position: fixed;
   top: 0;
   z-index: 9999;
 }
+
 header .inner-header {
   /* background: orange; */
   width: 84%;
   margin: 0 auto;
 }
-header .inner-header .logo{
+
+header .inner-header .logo {
   /* background: skyblue; */
   float: left;
   width: 200px;
 }
-header .inner-header .logo img{
+
+header .inner-header .logo img {
   width: 100%;
   vertical-align: middle;
 
-  border:  1px solid #fff;
+  border: 1px solid #fff;
   border-radius: 15px;
   opacity: 0.9;
 }
-header .inner-header .gnb{
+
+header .inner-header .gnb {
   /* background:  violet; */
   float: left;
   margin-left: 80px;
 }
-header .inner-header .gnb li{
-  margin-right: 80px;}
 
-header .inner-header .gnb li a:hover{
+header .inner-header .gnb li {
+  margin-right: 80px;
+}
+
+header .inner-header .gnb li a:hover {
   color: #ff8342;
 }
+
 /* nav태그를 지목해서 gnb와 tnb의 글자를 지목 */
-header .inner-header nav li a{
+header .inner-header nav li a {
   font-size: 16px;
   color: white;
 }
-header .inner-header .tnb{
+
+header .inner-header .tnb {
   /* background: greenyellow; */
   float: right;
 }
-header .inner-header .tnb li{
+
+header .inner-header .tnb li {
   margin-right: 25px;
 }
+
 header .inner-header .tnb li:first-child i,
-header .inner-header .tnb li:nth-child(2) i{
+header .inner-header .tnb li:nth-child(2) i {
   margin-right: 8px;
   font-size: 20px;
 }
-header .inner-header .tnb li:last-child a{
+
+header .inner-header .tnb li:last-child a {
   border: 1px solid #fff;
   border-radius: 30px;
   padding: 5px 15px;
 }
-header .inner-header .tnb li:last-child a:hover{
+
+header .inner-header .tnb li:last-child a:hover {
   background: #fff;
   color: #ff8342;
 
 }
-header .inner-header .tnb li:last-child i{
+
+header .inner-header .tnb li:last-child i {
   margin-left: 5px;
   font-size: 20px;
 }
@@ -103,13 +123,20 @@ header .inner-header .tnb li:last-child i{
 header .inner-header nav li {
   float: left;
 }
+
+/* 모바일 전용 햄버거 버튼은 defaul가 display:none으로 */
+header .inner-header .gnb-mobile {
+  display: none;
+}
+
 /* section.main style */
-section.main{
+section.main {
   background: url(../img/vis_4.jpg) no-repeat center / cover fixed;
   height: 100vh;
   position: relative;
 }
-section.main .main-title{
+
+section.main .main-title {
   /* background: yellow; */
   position: absolute;
   top: 50%;
@@ -120,24 +147,29 @@ section.main .main-title{
   text-shadow: 2px 2px 10px #123;
   animation: uprise 1s;
 }
+
 @keyframes uprise {
-  from{
+  from {
     opacity: 0;
     top: 60%;
   }
-  to{
+
+  to {
     opacity: 1;
     top: 50%;
   }
 }
-section.main .main-title h2{
+
+section.main .main-title h2 {
   font-size: 36px;
 }
-section.main .main-title p{
+
+section.main .main-title p {
   font-size: 20px;
   margin: 20px 0;
 }
-section.main .main-title .view{
+
+section.main .main-title .view {
   font-size: 16px;
   letter-spacing: 2px;
 
@@ -151,7 +183,8 @@ section.main .main-title .view{
   position: relative;
   overflow: hidden;
 }
-section.main .main-title .view::after{
+
+section.main .main-title .view::after {
   content: '';
   width: 0;
   height: 100%;
@@ -161,65 +194,80 @@ section.main .main-title .view::after{
   left: 0;
   transition: 0.3s;
 }
-section.main .main-title .view:hover:after{
+
+section.main .main-title .view:hover:after {
   width: 100%;
 }
+
 /* section에 들어갈 디자인을 일괄 지정 */
-section .title{
+section .title {
   text-align: center;
 }
-section .title h2{
+
+section .title h2 {
   font-size: 45px;
   color: #111;
   margin-bottom: 10px;
 }
-section .title p{
+
+section .title p {
   font-size: 18px;
   color: #555;
 }
-section .sub-container{
+
+section .sub-container {
   /* background: orange; */
   width: 74%;
   margin: 0 auto;
 }
+
 /* section.about style */
-section.about{
+section.about {
   /* background: tomato; */
   margin: 80px 0;
 }
+
 section.about .sub-container {
   margin-top: 30px;
-  border-bottom: 1px solid #ddd ;
+  border-bottom: 1px solid #ddd;
   padding-bottom: 30px;
 }
-section.about .sub-container li{
+
+section.about .sub-container li {
   float: left;
   width: 33.333%;
   box-sizing: border-box;
   height: 510px;
 }
-section.about .sub-container li .img-box{
+
+section.about .sub-container li .img-box {
   overflow: hidden;
 }
-section.about .sub-container li .img-box img{
+
+section.about .sub-container li .img-box img {
   width: 100%;
   transition: 0.6s;
 }
-section.about .sub-container li a:hover .img-box img{
+
+section.about .sub-container li a:hover .img-box img {
   transform: scale(1.2);
 }
-section.about .sub-container li a .text{
+
+section.about .sub-container li a .text {
   padding: 25px;
 }
-section.about .sub-container li a .text h3{
+
+section.about .sub-container li a .text h3 {
   font-size: 20px;
   margin-bottom: 10px;
 }
-section.about .sub-container li a .text p{
+
+section.about .sub-container li a .text p {
   font-size: 16px;
   margin-bottom: 20px;
 }
-section.about .sub-container li a .text p.more{
+
+section.about .sub-container li a .text p.more {
   /* 일괄 대소문자 변경 <-> lowercase */
   text-transform: uppercase;
   font-weight: 700;
@@ -227,7 +275,8 @@ section.about .sub-container li a .text p.more{
   position: relative;
   padding-left: 40px;
 }
-section.about .sub-container li a .text p.more::before{
+
+section.about .sub-container li a .text p.more::before {
   content: '→';
   display: block;
   width: 30px;
@@ -240,18 +289,21 @@ section.about .sub-container li a .text p.more::before{
   top: -7px;
   left: 0;
 }
+
 /* section.innovation style */
-section.innovation{
+section.innovation {
   margin-bottom: 150px;
 }
-section.innovation .img-box{
+
+section.innovation .img-box {
   margin-top: 50px;
   height: 540px;
   background: url(../img/product_1.jpg) no-repeat center / cover;
 
   position: relative;
 }
-section.innovation .img-box .inner{
+
+section.innovation .img-box .inner {
   background: #3a3c4e;
   width: 80%;
   color: #fff;
@@ -261,24 +313,28 @@ section.innovation .img-box .inner{
   left: 50%;
   transform: translate(-50%, 0);
 }
-section.innovation .img-box .inner h3{
+
+section.innovation .img-box .inner h3 {
   background: #fff;
   color: #222;
   font-size: 18px;
   padding: 25px 45px;
   box-sizing: border-box;
 }
-section.innovation .img-box .inner .bottom{
+
+section.innovation .img-box .inner .bottom {
   padding: 35px 85px;
   box-sizing: border-box;
 }
-section.innovation .img-box .inner .bottom p{
+
+section.innovation .img-box .inner .bottom p {
   /* background: yellow; */
   float: left;
   width: 70%;
   line-height: 1.6;
 }
-section.innovation .img-box .inner .bottom a{
+
+section.innovation .img-box .inner .bottom a {
   /* background: aqua; */
   /* display: block; -> float 사용할 거면 굳이 block으로 직접 바꿀 필요 없음. */
   float: right;
@@ -286,63 +342,77 @@ section.innovation .img-box .inner .bottom a{
   border-radius: 50px;
   background: #ff8342;
 }
-section.innovation .img-box .inner .bottom a:hover{
+
+section.innovation .img-box .inner .bottom a:hover {
   background: #f86010;
 }
+
 /* section.me style */
-section.me{
+section.me {
   background: url(../img/me.jpg) no-repeat center / cover;
   padding: 80px 0;
   margin-bottom: 150px;
 }
-section.me ul.list{
+
+section.me ul.list {
   margin-top: 50px;
   border-top: 2px solid #000;
   border-bottom: 2px solid #000;
 }
-section.me ul.list > li{
+
+section.me ul.list>li {
   padding: 30px 60px;
 }
-section.me ul.list > li:first-child{
+
+section.me ul.list>li:first-child {
   border-bottom: 1px solid #ddd;
 }
-section.me ul.list > li h3{
+
+section.me ul.list>li h3 {
   font-size: 18px;
   margin-bottom: 20px;
   position: relative;
 }
-section.me ul.list > li h3 span{
+
+section.me ul.list>li h3 span {
   position: absolute;
   left: -30px;
   color: #ff8342;
 }
-section.me ul.list > li p{
+
+section.me ul.list>li p {
   line-height: 1.6;
   margin-bottom: 20px;
 }
-section.me ul.list > li .more{
+
+section.me ul.list>li .more {
   font-size: 16px;
   font-weight: bold;
 }
-section.me ul.list > li .more span{
+
+section.me ul.list>li .more span {
   color: #ff8342;
   margin-left: 3px;
   font-size: 14px;
 }
-section.me ul.list ul.in{
+
+section.me ul.list ul.in {
   margin-bottom: 30px;
 }
-section.me ul.list ul.in li em{
+
+section.me ul.list ul.in li em {
   /* float이나 postion이 적용되면 자동으로 block요소로 바뀜 */
   float: left;
   font-weight: bold;
   width: 12%;
 }
-section.me ul.list ul.in li p{
+
+section.me ul.list ul.in li p {
   float: left;
   position: relative;
 }
-section.me ul.list ul.in li p::before{
+
+section.me ul.list ul.in li p::before {
   content: '';
   width: 4px;
   height: 4px;
@@ -352,7 +422,8 @@ section.me ul.list ul.in li p::before{
   left: -35px;
   top: 8px;
 }
-#incruit-btn{
+
+#incruit-btn {
   display: block;
   width: 280px;
   background: #ff8342;
@@ -363,30 +434,37 @@ section.me ul.list ul.in li p::before{
   padding: 10px 0;
   cursor: pointer;
 }
+
 /* section. sns style */
-section.sns{
-  margin-bottom: 60px; 
+section.sns {
+  margin-bottom: 60px;
 }
-section.sns ul{
+
+section.sns ul {
   margin: 50px auto;
 }
-section.sns ul li{
+
+section.sns ul li {
   float: left;
   width: 32%;
   margin-right: 2%;
 }
-section.sns ul li:last-child{
+
+section.sns ul li:last-child {
   margin-right: 0;
 }
-section.sns ul li .img-box{
+
+section.sns ul li .img-box {
   max-height: 250px;
   overflow: hidden;
   position: relative;
 }
-section.sns ul li .img-box img{
+
+section.sns ul li .img-box img {
   width: 100%;
 }
-section.sns ul li .img-box::before{
+
+section.sns ul li .img-box::before {
   content: '';
   width: 0;
   height: 100%;
@@ -396,10 +474,12 @@ section.sns ul li .img-box::before{
   left: 0;
   transition: 0.5s;
 }
-section.sns ul li a:hover .img-box::before{
+
+section.sns ul li a:hover .img-box::before {
   width: 100%;
 }
-section.sns ul li a:hover .img-box::after{
+
+section.sns ul li a:hover .img-box::after {
   content: 'BLOG';
   font-size: 15px;
   font-family: 'EXO 2', sans-serif;
@@ -415,36 +495,313 @@ section.sns ul li a:hover .img-box::after{
   opacity: 0;
   transition: 0.7s;
 }
-section.sns ul li a:hover .img-box::after{
+
+section.sns ul li a:hover .img-box::after {
   opacity: 1;
 }
 
-section.sns ul li .bottom{
+section.sns ul li .bottom {
   padding: 20px 0 20px 30px;
   box-sizing: border-box;
 }
-section.sns ul li .bottom p{
+
+section.sns ul li .bottom p {
   font-size: 18px;
 }
-section.sns ul li .bottom p.color{
+
+section.sns ul li .bottom p.color {
   color: #999;
   font-size: 15px;
   margin-bottom: 10px;
 }
-section.sns ul li .bottom p.time{
+
+section.sns ul li .bottom p.time {
   color: #999;
   font-size: 14px;
   margin-top: 30px;
 }
-section.sns ul li .bottom p.time i{
+
+section.sns ul li .bottom p.time i {
   margin-right: 5px;
   font-size: 0.9em;
 }
 
-/* footer */
-footer{
-  padding: 10px;
-  font-weight: 700;
-  color: black;
+/* footer style */
+footer {
+  border-top: 1px solid #999;
+  padding: 30px 0;
 }
-footer a{}
+
+footer .inner {
+  width: 84%;
+  margin: 0 auto;
+}
+
+footer .inner .ft-logo {
+  float: left;
+  width: 14%;
+}
+
+footer .inner .ft-logo img {
+  width: 100%;
+}
+
+footer .inner .address {
+  float: left;
+  margin-left: 100px;
+  margin-top: 20px;
+}
+
+footer .inner .address li:first-child {
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+
+footer .inner .address li:last-child {
+  color: #999;
+}
+
+footer .inner .list {
+  float: right;
+  margin-top: 20px;
+}
+
+footer .inner .list li {
+  float: left;
+  margin-left: 80px;
+}
+
+footer .inner .list li:last-child {
+  font-weight: 700;
+}
+
+footer .inner .list li a:hover {
+  color: #ff8342;
+  text-decoration: underline;
+}
+
+/* =========== 반응형 웹 디자인 ==========*/
+/* 노트북 해상도 1600px 미만 */
+@media (max-width: 1599px) {
+  header .inner-header nav {
+    display: none;
+  }
+
+  header .inner-header .gnb-mobile {
+    display: block;
+    float: right;
+    font-size: 40px;
+    color: #fff;
+  }
+
+  section.main .main-title h2 {
+    font-size: 35px;
+  }
+
+  section.main .main-title p {
+    font-size: 18px;
+  }
+
+  section.main .main-title .view {
+    font-size: 12px;
+    width: 120px;
+  }
+
+  section.sns ul li .img-box {
+    max-height: 170px;
+  }
+
+  footer .inner .ft-logo {
+    width: 30%;
+  }
+}
+
+/* 태블릿 1024 이하 해상도 (아이패드 프로) */
+@media (max-width: 1024px) {
+
+  header .inner-header,
+  section .sub-container,
+  footer .inner {
+    width: 95%;
+  }
+
+  section.main .main-title h2 {
+    font-size: 55px;
+  }
+
+  section.main .main-title p {
+    font-size: 22px;
+  }
+
+  section.main .main-title .view {
+    font-size: 16px;
+    width: 180px;
+  }
+
+  section.me ul.list ul.in li p::before {
+    left: -20px;
+  }
+
+  footer .inner .list {
+    float: left;
+  }
+}
+
+/* 태블릿 768 이하 해상도 (아이패드 미니) */
+@media (max-width: 768px) {
+  section.main .main-title h2 {
+    font-size: 40px;
+  }
+
+  section.main .main-title p {
+    font-size: 18px;
+  }
+
+  section.about .sub-container li {
+    float: none;
+    width: 100%;
+    margin-bottom: 150px;
+  }
+
+  section.about .sub-container li .img-box {
+    height: 500px;
+  }
+
+  section.innovation .img-box .inner .bottom {
+    padding: 30px;
+  }
+
+  section.innovation .img-box .inner .bottom p {
+    float: none;
+    width: 100%;
+    margin-bottom: 30px;
+  }
+
+  section.innovation .img-box .inner .bottom a {
+    float: none;
+    display: block;
+    width: 100px;
+    text-align: center;
+    margin: 0 auto;
+  }
+
+  section.me {
+    padding: 50px 0;
+  }
+
+  section.me ul.list ul.in li em {
+    float: none;
+    width: 100%;
+    font-size: 17px;
+    margin-bottom: 5px;
+  }
+
+  section.me ul.list ul.in li p {
+    float: none;
+    margin-top: 10px;
+  }
+
+  section.sns ul li {
+    float: none;
+    width: 100%;
+    margin-bottom: 10px;
+  }
+
+  section.sns ul li a .img-box {
+    max-height: none;
+  }
+
+  footer .inner .ft-logo {
+    float: none;
+    width: 30%;
+    margin: 0 auto;
+  }
+
+  footer .inner .address {
+    float: none;
+    width: 100%;
+    text-align: center;
+    margin: 20px auto;
+  }
+
+  footer .inner .list li {
+    margin-left: 60px;
+  }
+}
+
+/* 모바일 414px 이하 해상도(아이폰 6/7/8/ plus) */
+@media screen and (max-width: 414px) {
+  header {
+    height: 80px;
+    line-height: 80px;
+  }
+
+  header .inner-header .logo {
+    width: 150px;
+  }
+
+  section.main .main-title h2 {
+    font-size: 30px;
+  }
+
+  section.main .main-title p {
+    font-size: 16px;
+  }
+
+  section.main .main-title .view {
+    width: 150px;
+    font-size: 14px;
+  }
+
+  section .title h2 {
+    font-size: 25px;
+  }
+
+  section .title p {
+    font-size: 14px;
+  }
+
+  section.about {
+    padding: 30px 0;
+  }
+
+  section.about .sub-container li .img-box {
+    height: 300px;
+  }
+
+  section.about .sub-container li {
+    border: 1px solid #ddd;
+    box-sizing: border-box;
+    background: #fafafa;
+    margin-bottom: 30px;
+    height: fit-content;
+  }
+
+  section.innovation .img-box {
+    height: 400px;
+  }
+
+  section.innovation .img-box .inner {
+    top: 50%;
+  }
+
+  section.me ul.list>li {
+    padding: 20px 20px 20px 45px;
+  }
+
+  section.me ul.list>li p {
+    text-align: justify;
+  }
+
+  footer .inner .ft-logo {
+    width: 50%;
+  }
+
+  footer .inner .list {
+    display: none;
+  }
+
+  br.mo {
+    display: block;
+  }
+}
